5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1888_1619.log
== TEST (2019-07-09 16:25:42) 
-- CODE:
from numpy import *
a = array(eval(input("tempo: ")))
b=zeros(a, dtype=int)
c=0
for i in range(size(a)):
	if ( a[i]!= 1):
		c = c + 1
d = 0
for i in range (size(a)):
	if ( a[i]!=1):
		b[d] = a[i]		
	elif(a[i]==1):
		b[c]= a[i]
		c = c + 1 
print(b)
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:28:05) 
-- CODE:
from numpy import *
a = array(eval(input("tempo: ")))
b=zeros(a, dtype=int)
c=0
for i in range(size(a)):
	if ( a[i]!= 1):
		c = c + 1
d = 0
for i in range (size(a)):
	if ( a[i]!=1):
		b[d] = a[i]		
	elif(a[i]==1):
		b[c]= a[i]
		c = c + 1 
print(b)
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:28:42) 
-- CODE:
from numpy import *
a = array(eval(input("tempo: ")))
b=zeros(a, dtype=int)
c=0
for i in range(size(a)-1):
	if ( a[i]!= 1):
		c = c + 1
d = 0
for i in range (size(a)-1):
	if ( a[i]!=1):
		b[d] = a[i]		
	elif(a[i]==1):
		b[c]= a[i]
		c = c + 1 
print(b)
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:29:54) 
-- CODE:
from numpy import *
a = array(eval(input("tempo: ")))
b=zeros(a, dtype=int)
c=0
for i in range(size(a)-1):
	if ( a[i]!= 1):
		c = c + 1
d = 0
c = c - 1
for i in range (size(a)-1):
	if ( a[i]!=1):
		b[d] = a[i]		
	elif(a[i]==1):
		b[c]= a[i]
		c = c + 1 
print(b)
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:50:20) 
-- CODE:
from numpy import *
a = array(eval(input("tempo: ")))
b=zeros(a, dtype=int)
c=0
for i in a:
	if ( i != 1):
		c = c + 1
d = zeros(c -1, d type = int)
e =0
for i in a:
	if (a[i]!= 1):
		d[e] = a[i]
		e = e + 1
	else:
		b[c] = 1
		c = c + 1


	
-- ERROR:
File "XXXX", line 8
    d = zeros(c -1, d type = int)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:50:35) 
-- CODE:
from numpy import *
a = array(eval(input("tempo: ")))
b=zeros(a, dtype=int)
c=0
for i in a:
	if ( i != 1):
		c = c + 1
d = zeros(c -1, dtype = int)
e =0
for i in a:
	if (a[i]!= 1):
		d[e] = a[i]
		e = e + 1
	else:
		b[c] = 1
		c = c + 1


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:51:14) 
-- CODE:
from numpy import *
a = array(eval(input("tempo: ")))
b=zeros(a, dtype=int)
c=0
for i in a:
	if ( i != 1):
		c = c + 1
d = zeros(c -1, dtype = int)
e =0
for i in a:
	if (i!= 1):
		d[e] = a[i]
		e = e + 1
	else:
		b[c] = 1
		c = c + 1


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:52:15) 
-- CODE:
from numpy import *
a = array(eval(input("tempo: ")))
b=zeros(a, dtype=int)
c=0
for i in a:
	if ( i != 1):
		c = c + 1
d = zeros(c, dtype = int)
e =0
for i in a:
	if (i!= 1):
		d[e] = a[i]
		e = e + 1
	else:
		b[c] = 1
		c = c + 1


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:52:50) 
-- CODE:
from numpy import *
a = array(eval(input("tempo: ")))
b=zeros(a, dtype=int)
c=0
for i in a:
	if ( i != 1):
		c = c + 1
d = zeros(c, dtype = int)
e =0
for i in a:
	if (i!= 1):
		b[e] = a[i]
		e = e + 1
	else:
		b[c] = 1
		c = c + 1


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:55:02) 
-- CODE:
from numpy import *
a = array(eval(input("tempo: ")))
b=zeros(size(a), dtype=int)
c=0
for i in a:
	if ( i != 1):
		c = c + 1
d = zeros(c, dtype = int)
e =0
for i in a:
	if (i!= 1):
		b[e] = a[i]
		e = e + 1
	else:
		b[c] = 1
		c = c + 1


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
